--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,12 @@
 test:
   global:
     property: test global property sreeni
+
+#RabbitMQ connection details
+
+spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
